Ban commons-io and commons-collection4 calls
I kept some common-io calls around and created:
https://github.com/smallrye/smallrye-common/issues/463
for consideration.

But hopefully, this will avoid further additions.